# robotervermessung-rosbag-recorder

./: .gitignore  README.md
scripts/: .~lock.record_20240715_144638_random_python_final.csv#  DELETEALL.txt  csv_processor.py  db_config.py  db_config_pick_place.py  db_gui.py  db_operations.py  db_operations_pickplace.py  main_app.py  mongodb_postgresql_migration.py  postgresql_test.py  record_20240701_182718_testefinal3_final.csv  run_gui.sh
scripts/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
scripts/log/: latest_build
scripts/old_version/: csv_to_postgresql_gui.py  insert_data_postgresql.py
scripts/pages/: csv_upload_app.py
src/data_preparation/: package.xml  setup.cfg  setup.py
src/data_preparation/data_preparation/: connect_socket.py  ftp_download.py  random_point_gen.py  random_point_gen_pick_place.py  rosbag_gui.py  rosbag_processor.py
src/data_preparation/install/: local_setup.sh  setup.sh
src/data_preparation/install/data_preparation/lib/data_preparation/: connect_socket  rosbag_gui  rosbag_processor
src/data_preparation/install/data_preparation/share/data_preparation/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/data_preparation/launch/: connect.vicon.launch.yaml
src/data_preparation/log/: latest_build
