<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>data_preparation</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="gustavotb_barros@hotmail.com">gugafelds</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <build_depend>rclpy</build_depend>
  <build_depend>rosbag2_py</build_depend>
  <build_depend>rosidl_runtime_py</build_depend>
  <build_depend>numpy</build_depend>
  <build_depend>pandas</build_depend>
  <build_depend>matplotlib</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rosbag2_py</exec_depend>
  <exec_depend>rosidl_runtime_py</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>pandas</exec_depend>
  <exec_depend>matplotlib</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
